# prism

./: .dev.env.example  .dockerignore  .gitignore  .prod.env.example  CHANGELOG.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  renovate.json
.github/workflows/: ci.yaml  release.yaml
alembic/: env.py
alembic/versions/: 43bce96cea09_initial_schema.py
config/: config.yaml
docker/: Dockerfile  entrypoint-dev.sh  entrypoint-prod.sh
docker/init/: 01-extensions.sql
hooks/: time_hook.py  time_tracker.py
src/prism/: __init__.py  __main__.py  mcp_serializer.py  server.py
src/prism/config/: __init__.py  loader.py
src/prism/core/: __init__.py  executor.py  gemini.py  hooks.py  logging.py  parsing.py  process.py  response.py  retry.py  session.py
src/prism/database/: __init__.py  connection.py  models.py  repository.py
src/prism/orchestrator/: __init__.py  dispatcher.py  flow.py  synthesizer.py
src/prism/prompts/: __init__.py  perplexity_worker.md  registry.py  system.md  user.md
src/prism/tools/: __init__.py  cancel.py  fetch.py  search.py
src/prism/workers/: __init__.py  base.py  claude_search.py  factory.py  gemini_search.py  manager.py  (+5 more)
tests/e2e/: __init__.py  fixtures.py  log_checker.py  run_e2e.py
tests/prompt-model/: Dockerfile  README.md  docker-compose.yaml
tests/unit/: __init__.py  conftest.py  test_config.py  test_database.py  test_executor.py  test_gemini.py  test_hooks.py  test_logging.py  test_orchestrator.py  test_resume.py  test_retry.py  test_session.py  test_workers.py
(+35 files in other folders)
